--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,4 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&subset=cyrillic');
+﻿@import url('https://fonts.googleapis.com/css?family=Lato|Roboto:300,400,400i,500,700&subset=cyrillic');
 
 /* global */
 body {
@@ -33,11 +33,75 @@ body {
 	-ms-transform: scaleX(0);
 	transform: scaleX(0);
 }
-.underlined:hover:after {
+.underlined:hover:after,
+.header-basket-col .basket:hover .underlined:after  {
 	visibility: visible;
 	-webkit-transform: scaleX(1);
 	-ms-transform: scaleX(1);
 	transform: scaleX(1);
+}
+
+.modal {
+	background: rgba(73,73,73,0.25);
+}
+.modal-dialog {
+	width: 33.33%;
+}
+.modal-content {
+	border-radius: 0;
+}
+.modal-header {
+	background: #DDEAF2;
+	text-align: center;
+	padding: 15px 0;
+	font-size: 18px;
+	color: #303033;
+	border: none;
+}
+.modal-body {
+	padding: 20px 20px 0 20px;
+}
+.modal-footer {
+	border: none;
+	padding: 20px 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+#feedback input, #feedback textarea {
+	width: 100%;
+	border-bottom: 2px solid #B6CBD9;
+	font-size: 16px;
+	padding: 5px 8px;
+	margin-bottom: 20px;
+	line-height: 1.1;
+}
+#feedback textarea {
+	resize: none;
+	height: 130px;
+	margin-bottom: 0;
+}
+#feedback input[type="submit"] {
+	background: #DB4248;
+	border-radius: 2px;
+	right: 0;
+	position: relative;
+	font-size: 16px;
+	color: #FFFFFF;
+	padding: 8px 15px;
+	border: none;
+	width: auto;
+	margin-bottom: 0;
+	flex-grow: 1;
+}
+#feedback .submit-result {
+	float: left;
+	display: inline-block;
+	font-size: 16px;
+	color: #DB4248;
+	flex-grow: 1;
+	text-align: left;
+	margin: auto;
 }
 
 /* general */
@@ -58,19 +122,141 @@ header {
 		font-family: 'Roboto';
 		font-weight: 300;
 	}
+	.header-logo-col,
+	.header-search-col,
+	.header-feedback-col,
+	.header-basket-col {
+		float: left;
+		padding-left: 15px;
+		padding-right: 15px;
+		position: relative;
+	}
+	.header-logo-col { width: 28.6%; }
+	.header-search-col { width: 40%; }
+	.header-feedback-col { width: 14.74%; }
+	.header-basket-col { width: 16.66%; }
+	.header-phones {
+		position: absolute;
+		left: 15px;
+		top: -28px;
+		padding-left: 30px;
+		line-height: 27px;
+		background: url('../images/header-phones-ico.png') no-repeat left center;
+		color: #FFFFFF;
+		font-size: 17px;
+		font-family: 'Lato';
+		letter-spacing: 0.1px;
+	}
+	.header-search {
+		height: 47px;
+		width: 100%;
+		position: relative;
+		overflow: hidden;
+		margin-top: 5px;
+	}
+		.header-search label {
+			position: absolute;
+			cursor: text;
+			left: 15px;
+			top: 0;
+			line-height: 47px;
+			color: #C8C8C8;
+			font-weight: 300;
+			transition: left 0.3s ease-in-out, opacity 0.3s ease-in-out;
+		}
+		.header-search input[type="text"] {
+			width: 100%;
+			height: 100%;
+			padding-right: 50px;
+			padding-left: 15px;
+			color: #C8C8C8;
+			font-weight: 300;
+			background: rgba(150,150,150,0.35);
+		}
+			.header-search input[type="text"]:focus + label,
+			.header-search input[type="text"]:valid + label {
+				left: -60px;
+				opacity: 0;
+			}
+		.header-search input[type="submit"] {
+			width: 47px;
+			height: 47px;
+			position: absolute;
+			top: 0;
+			right: 0;
+			background: url('../images/header-search-button.png') no-repeat center center;
+		}
+	.header-feedback-col {
+		padding-top: 5px;
+		text-align: center;
+	}
+		.header-feedback-col a {
+			display: inline-block;
+			padding-top: 34px;
+			background: url('../images/header-feedback-ico.png') no-repeat center top;
+			font-size: 14px;
+			color: #FFFFFF;
+			text-decoration: none;
+		}
+	.header-basket-col {
+		padding-top: 5px;
+		text-align: center;
+	}
+		.header-basket-col .basket {
+			display: flex;
+			height: 47px;
+			position: relative;
+			cursor: pointer;
+		}
+			.header-basket-col .basket .ico {
+				background: url('../images/header-basket-ico.png') no-repeat center top;
+				display: inline-block;
+				width: 37px;
+				height: 34px;
+				position: relative;
+			}
+			.header-basket-col .basket .badge {
+				font-size: 12.54px;
+				padding: 4px 7px;
+				position: absolute;
+				bottom: -5px;
+				left: -2px;
+			}
+			.header-basket-col .basket .total-price {
+				font-size: 14px;
+				font-weight: bold;
+				color: #FFFFFF;
+				margin: auto;
+			}
+			.header-basket-col .basket-details {
+				position: absolute;
+				visibility: hidden;
+				opacity: 0;
+			}
 	header nav {
 		height: 47px;
 		background: #231F20;
 		margin-top: 24px;
+		top: -50px;
+		transition: top 0.3s ease-in-out;
+	}
+	header nav.fixed {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		margin-top: 0;
 	}
 	.catalog-button {
 		display: flex;
+		float: left;
+		position: relative;
 		height: 47px;
-		width: 100%;
+		width: 170px;
 		color: #FFFFFF;
 		font-size: 14px;
 		background: #C83D43;
-		padding-right: 10px;
+		padding-right: 16px;
 	}
 	.catalog-button, .catalog-button:hover, .catalog-button:active, .catalog-button:focus {
 		text-decoration: none;
@@ -81,9 +267,9 @@ header {
 			width: 10px;
 			height: 5px;
 			position: absolute;
-			right: 25px;
+			right: 16px;
 			top: calc(50% - 2.5px);
-			background: url('../images/catalog-button-bg.png') no-repeat center center;
+			background: url('../images/catalog-button-ico.png') no-repeat center center;
 			background-size: contain;
 		}
 		.catalog-button span {
@@ -91,24 +277,24 @@ header {
 		}
 	.main-nav {
 		display: flex;
-		margin-left: -30px;
+		margin-left: 170px;
 	}
-	.main-nav li {
+	.main-nav > li {
 		flex-grow: 1;
 		background: transparent;
 		margin-top: -5px;
 		padding-top: 5px;
 		transition: height 0.3s ease-in-out, background 0.3s ease-in-out;
 	}
-		.main-nav li:hover, .main-nav li.active {
+		.main-nav > li:hover, .main-nav > li.active {
 			background: #FFFFFF;
 			height: 52px;
 			border-radius: 2px 2px 0 0;
 		}
-	.main-nav li:last-child {
+	.main-nav > li:last-child {
 		margin-right: 0;
 	}
-		.main-nav li a {
+		.main-nav > li > a {
 			font-size: 14px;
 			height: 47px;
 			display: flex;
@@ -116,12 +302,51 @@ header {
 			text-decoration: none;
 			transition: color 0.3s ease-in-out;
 		}
-		.main-nav li:hover a, .main-nav li.active a   {
+		.main-nav > li:hover > a, .main-nav > li.active > a   {
 			color: #000000;
 		}
-			.main-nav li a span {
+			.main-nav > li a span {
 				margin: auto;
 			}
+	.main-nav > li > ul {
+		visibility: hidden;
+		opacity: 0;
+		display: flex;
+		justify-content: flex-start;
+		flex-wrap: wrap;
+		background: #FFFFFF;
+		position: absolute;
+		/*width: calc(100% - 30px);*/
+		width: 100%;
+		top: 47px;
+		/*left: 15px;*/
+		left: 0;
+		padding: 33px 15px 13px;
+		box-shadow: 0px 4px 4px 0 rgba(0,0,0,0.27);
+		transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+	}
+	.main-nav > li:hover > ul {
+		visibility: visible;
+		opacity: 1;
+	}
+		.main-nav > li > ul > li {
+			margin-bottom: 8px;
+			width: 16.65%;
+		}
+		.main-nav > li > ul > li > a {
+			font-size: 12px;
+			color: #537285;
+		}
+		.main-nav > li > ul > li > ul {
+			padding-top: 4px;
+		}
+		.main-nav > li > ul > li > ul > li {
+			margin-bottom: 3px;
+		}
+		.main-nav > li > ul > li > ul > li > a {
+			font-size: 12px;
+			color: #303033;
+		}
 footer {
 	min-height: 300px;
 	background: url('../images/footer-bg.png') no-repeat center bottom;
