--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -149,7 +149,7 @@ textarea[required] + label {
 .label {
 	width: 76px;
 	height: 42px;
-	background: #C83D43;
+	background-color: #C83D43;
 	text-align: center;
 	color: #FFFFFF;
 	font-weight: bold;
@@ -176,6 +176,20 @@ textarea[required] + label {
 	left: auto;
 	right: 8px;
 }
+.label.thumb-up {
+	background-image: url('../images/thump-up.png');
+	background-repeat: no-repeat;
+	background-position: center bottom;
+}
+.goods .label {
+	top: -7px;
+	height: 34px;
+	padding-top: 5px;
+}
+.goods .label:after {
+	top: 34px;
+	border-top: 28px solid #C83D43;
+}
 /* heading */
 .heading {
 	text-align: center;
@@ -189,6 +203,9 @@ textarea[required] + label {
 		padding: 19px 0;
 	}
 /* pager */
+.pager{
+	margin: 0 0 49;
+} 
 .pager a {
 	color: #303033;
 	font-size: 17.1px;
@@ -618,7 +635,7 @@ footer {
 .goods .item {
 	text-decoration: none;
 	height: 395px;
-	margin-bottom: 28px;
+	margin-bottom: 30px;
 	box-shadow: 0 0 6px 0 rgba(0,0,0,0.11);
 	transition: box-shadow 0.3s ease-in-out;
 	color: #000000;
@@ -646,7 +663,29 @@ footer {
 		background-repeat: no-repeat;
 		background-size: contain;
 		margin-bottom: 13px;
+		position: relative;
 	}
+		.goods .item .image .zoom {
+			content: '';
+			visibility: hidden;
+			opacity: 0;
+			width: 68px;
+			height: 68px;
+			border-radius: 50%;
+			position: absolute;
+			left: calc(50% - 34px);
+			top: calc(50% - 34px);
+			background: url('../images/goods-image-zoom-ico.png') no-repeat center center #db4248;
+			cursor: pointer;
+			transition: all 0.3s ease-in-out;
+		}
+			.goods .item .image:hover .zoom {
+				visibility: visible;
+				opacity: 0.75;
+			}
+			.goods .item .image .zoom:hover {
+				opacity: 1;
+			}
 	.goods .item .title {
 		padding: 0 20px;
 		height: 50px;
@@ -666,20 +705,45 @@ footer {
 	.goods .item .price {
 		width: 100%;
 		height: 56px;
-		background-color: #DDEAF2;
 		transition: background-color 0.3s ease-in-out;
+		font-size: 22px;
+		text-align: left;
+		padding-left: 15px;
+		background-color: #DDEAF2;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.goods .item .price.special-price {
+		background-color: #F2DDE1;
+		color: #DB4248;
 	}
 	.goods .item:hover .price { 
 		background-color: #54545A;
-		font-size: 22px;
-		text-align: left;
 	}
-		.goods .item .price .normal-price {
-			
+		.goods .item .price span {
+			font-size: 10px;
 		}
-		.goods .item .price .special-price {
-			
-		}
+		
 		.goods .item .price .old-price {
-			
+			color: #000000;
+			font-size: 18px;
+			text-decoration: line-through;
+		}
+			.goods .item .price .old-price span {
+				text-decoration: none;
+			}
+	.goods .to-the-cart {
+		width: 52px;
+		height: 52px;
+		position: absolute;
+		right: 25px;
+		bottom: 31px;
+		border-radius: 50%;
+		background: url('../images/goods-cart-ico.png') no-repeat center center #db4248;
+		transition: background-color 0.3s ease-in-out;
+		overflow: hidden;
+	}
+		.goods .to-the-cart:hover {
+			background-color: #E47175;
 		}
