--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1045,14 +1045,14 @@ footer {
 .catalog-text-category:hover {
 	background: #E6EEF6;
 }
-	.catalog-text-category .category-ico {
+	.category-ico {
 		height: 190px;
 		position: relative;
 		background-repeat: no-repeat;
 		background-position: center center;
 		background-size: cover;
 	}
-	.catalog-text-category .category-label {
+	.category-label {
 		position: absolute;
 		left: 0;
 		bottom: 0;
@@ -1084,3 +1084,165 @@ footer {
 	background: #9E9E9E;
 	margin-bottom: 58px;
 }
+
+.bx-filter-parameters-box-title {
+	color: #9E9E9E;
+	font-size: 17px;
+	margin-bottom: 9px;
+}
+.bx-filter-parameters-box {
+	
+}
+	.bx-filter-parameters-box.range-slider {
+		
+	}
+		.bx-filter-parameters-box.range-slider .bx-filter-input-container {
+			margin-bottom: 18px;
+		}
+		.bx-filter-parameters-box.range-slider input {
+			height: 33px;
+			width: 100%;
+			border: 1px solid #9E9E9E;
+			border-radius: 2px;
+			text-align: center;
+			color: #303033;
+		}
+		.bx-filter-parameters-box.range-slider .bx-filter-input-container:first-child:after {
+			content: '-';
+			position: absolute;
+			top: 7px;
+			right: -3px;
+		}
+	.bx-ui-slider-track-container {
+		padding: 0 25px;
+	}
+		.bx-ui-slider-track-container .slider-labels {
+			display: flex;
+			width: calc(100% + 20px);
+			margin-left: -10px;
+			justify-content: space-between;
+			font-size: 17px;
+			color: #9E9E9E;
+			margin-bottom: 13px;
+		}
+		.bx-ui-slider-track-container .slider-labels .bx-ui-slider-part:first-child,
+		.bx-ui-slider-track-container .slider-labels .bx-ui-slider-part:last-child {
+			color: #303033;
+		}
+	.ui-widget.ui-widget-content.bx-ui-slider-track {
+		height: 7px;
+		border: none;
+		border-radius: 2px;
+		background: #909090;
+		position: relative;
+		margin-bottom: 46px;
+	}
+	.ui-widget.ui-widget-content.bx-ui-slider-track:before {
+		content: '';
+		width: calc(100% + 16px);
+		height: 7px;
+		bottom: 0;
+		left: -8px;
+		position: absolute;
+		display: block;
+		border-radius: 2px;
+		background: #909090;
+	}
+	.bx-ui-slider-track .ui-widget-header {
+		background: #323235;
+	}
+	.bx-ui-slider-track.ui-slider .ui-slider-handle {
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		border: none;
+		background: #C83D43;
+		top: -6.5px;
+	}
+.checkboxes .bx-filter-parameters-box-title {
+	margin-bottom: 21px;
+}
+.checkboxes .bx-filter-param-label {
+	padding-left: 30px;
+	color: #54545A;
+	font-size: 17px;
+	height: 20px;
+	position: relative;
+	line-height: 20px;
+	margin-bottom: 10px;
+}
+	.checkboxes .checkbox:last-child .bx-filter-param-label {
+		margin-bottom: 5px;
+	}
+	.checkboxes .bx-filter-param-label:before {
+		content: '';
+		display: block;
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		left: 0;
+		top: 0;
+		border: 1px solid #9E9E9E;
+		border-radius: 2px;
+	}
+	.checkboxes .bx-filter-param-label input[type="checkbox"] {
+		display: none;
+	}
+	.checkboxes .bx-filter-param-label input[type="checkbox"] + span {
+		position: relative;
+	}
+	.checkboxes .bx-filter-param-label input[type="checkbox"] + span:before {
+		content: '';
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		top: 0;
+		left: -30px;
+		background: url('../images/checkbox-checked.png') no-repeat center center transparent;
+		transform: scale(0);
+		opacity: 0;
+		transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+	}
+	.checkboxes .bx-filter-param-label input[type="checkbox"]:checked + span:before {
+		transform: scale(1);
+		opacity: 1;
+	}
+#del_filter {
+	width: calc(100% - 80px);
+	margin: 0 auto;
+	display: block;
+	padding-left: 10px;
+	height: 20px;
+	text-align: center;
+	color: #000000;
+	font-size: 16px;
+	background: url('../images/filter-clear-ico.png') no-repeat left center transparent;
+	transition: color 0.3s ease-in-out;
+	margin-bottom: 9px;
+}
+	#del_filter:hover {
+		color: #303033;
+	}
+#set_filter {
+	width: 100%;
+	height: 36px;
+	color: #FFFFFF;
+	background: #DB4248;
+	border-radius: 2px;
+	font-size: 16px;
+	transition: opacity 0.3s ease-in-out;
+}
+	#set_filter:hover {
+		opacity: 0.75;
+	}
+.additional-navigation {
+	margin-bottom: 7px;
+}
+	.additional-navigation .category-ico {
+		margin-bottom: 33px;
+	}
+	.additional-navigation .category-label {
+		font-size: 16px;
+		color: #231F20;
+		padding: 11px 5px;
+	}
