--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -101,29 +101,29 @@ a {
 	display: flex;
 	justify-content: space-between;
 }
-#feedback {
+.modal {
 	color: #7C878F;
 	font-size: 16px;
 }
-#feedback input, #feedback textarea {
+.modal input, .modal textarea {
 	width: 100%;
 	border-bottom: 2px solid #B6CBD9;
 	font-size: 16px;
 	padding: 5px 8px;
 	line-height: 1.1;
 }
-#feedback .input {
+.modal .input {
 	margin-bottom: 20px;
 }
-	#feedback .input label {
+	.modal .input label {
 		left: 5px;
 	}
-#feedback textarea {
+.modal textarea {
 	resize: none;
 	height: 130px;
 	margin-bottom: 0;
 }
-#feedback input[type="submit"] {
+.modal input[type="submit"] {
 	background: #DB4248;
 	border-radius: 2px;
 	right: 0;
@@ -136,7 +136,7 @@ a {
 	margin-bottom: 0;
 	flex-grow: 1;
 }
-#feedback .submit-result {
+.modal .submit-result {
 	float: left;
 	display: inline-block;
 	font-size: 16px;
@@ -259,6 +259,10 @@ a {
 }
 
 /* general */
+h1 {
+	font-size: 30px;
+	font-weight: normal;
+}
 .content {
 	padding-top: 34px;
 	padding-bottom: 55px;
@@ -1245,4 +1249,185 @@ footer {
 		font-size: 16px;
 		color: #231F20;
 		padding: 11px 5px;
+	}
+	
+.art {
+	color: #9E9E9E;
+	font-size: 17px;
+	margin-bottom: 7px;
+}
+.product-images {
+	
+}	
+	.product-images .main-image {
+		box-shadow: 0 0 6px 0 rgba(89,89,89,0.11);
+		height: 299px;
+		text-align: center;
+		overflow: hidden;
+		margin-bottom: 8px;
+		background-color: transparent;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+	}
+		.product-images .main-image img {
+			width: 100%;
+			height: 100%;
+			opacity: 0;
+		}
+	.product-images .mini-images {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+		.product-images .mini-images .mini-image {
+			width: calc(25% - 6px);
+			height: 70px;
+			box-shadow: 0 0 6px 0 rgba(89,89,89,0.11);
+			overflow: hidden;
+			margin-bottom: 8px;
+			cursor: pointer;
+			transition: box-shadow 0.3s ease-in-out;
+		}
+		.product-images .mini-images .mini-image:hover,
+		.product-images .mini-images .mini-image.active {
+			box-shadow: 0 0 6px 0 rgba(89,89,89,1);
+		}
+		.product-images .mini-images .mini-image.active {
+			cursor: auto;
+		}
+			.product-images .mini-images .mini-image img {
+				width: 100%;
+				height: auto;
+			}
+.product-description {
+	color: #4F4F4F;
+	font-size: 18px;
+	line-height: 1.16;
+	margin-bottom: 22px;
+}
+#product-count-input {
+	display: none;
+}
+.count {
+	margin-bottom: 42px;
+	position: relative;
+}
+.count label {
+	display: block;
+	color: #9E9E9E;
+	font-size: 17px;
+	font-weight: normal;
+	margin-bottom: 2px;
+}
+#product-count-input-clone {
+	width: 60px;
+	height: 40px;
+	border: 2px solid #EDF3F6;
+	border-radius: 2px;
+	text-align: center;
+	color: #000000;
+	font-size: 18px;
+}
+#product-count-increment, #product-count-decrement {
+	width: 20px;
+	height: 20px;
+	background: #D1DEE6;
+	color: #FFFFFF;
+	font-size: 16.84px;
+	cursor: pointer;
+	position: absolute;
+	left: 62px;
+	border-radius: 2px;
+	text-align: center;
+	line-height: 20px;
+	transition: background 0.3s ease-in-out;
+}
+#product-count-increment {
+	bottom: 21px;
+}
+#product-count-increment:before {
+	content: '+';
+}
+#product-count-decrement {
+	bottom: 0;
+}
+#product-count-decrement:before {
+	content: '-';
+}
+#product-count-increment:hover, #product-count-decrement:hover {
+	background: #DF555A;
+}
+.price {
+	font-size: 38px;
+	color: #000000;
+	margin-bottom: 44px;
+}
+.price .special-price {
+	color: #CB1F26;
+	margin-bottom: 4px;
+}
+	.price > div span {
+		font-size: 22px;
+	}
+.price .old-price {
+	font-size: 30px;
+	text-decoration: line-through;
+}
+	.price .old-price span {
+		font-size: 18px;
+	}
+.buy-button {
+	
+}
+	.buy-button a {
+		color: #FFFFFF;
+		font-size: 16px;
+		background: #DB4248;
+		text-align: center;
+		display: block;
+		width: 150px;
+		padding: 10px 0;
+		border-radius: 2px;
+		transition: opacity 0.3s ease-in-out;
+	}
+	.buy-button a:hover {
+		opacity: 0.75;
+	}
+.reviews {
+	padding-top: 100px;
+}
+.reviews .heading {
+	position: relative;
+}
+.reviews .heading > span {
+	padding-left: 165px;
+	display: inline-block;
+	width: 100%;
+	padding-left: 150px;
+}
+.reviews .heading > span > span {
+	color: #DB4248;
+	display: inline;
+	background: transparent;
+}
+.reviews .heading > a {
+	display: block;
+	position: absolute;
+	left: 30px;
+	top: 25%;
+	width: 210px;
+	height: 50%;
+	text-align: center;
+	text-decoration: none;
+	border-top: none;
+	color: #FFFFFF;
+	background: #89A2B3;
+	border-radius: 2px;
+	font-size: 16px;
+	line-height: 30px;
+	transition: opacity 0.3s ease-in-out;
+}
+	.reviews .heading > a:hover {
+		opacity: 0.75;
 	}
